feat(mapa): adiciona blocos e ações editáveis no mapa
PL-450
